# sunpy

./: .gitignore  pyproject.toml
sunpy-core/: pyproject.toml
sunpy-di/: pyproject.toml
sunpy-di/src/sunpy/di/: context.py  factory.py  scopes.py  utils.py
sunpy-di/tests/sunpy/di/: test_di.py
