[project]
name = "sunpy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "sunpy-di",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
sunpy-di = { path = "sunpy-di" }

[tool.pytest.ini_options]
pythonpath = ["sunpy-di/src"]
testpaths = ["sunpy-di/tests"]
