[project]
name = "sunpy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "sunpy-core",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv.sources]
sunpy-core = { path = "sunpy-core" }

[tool.pytest.ini_options]
pythonpath = ["sunpy-core/src"]
testpaths = ["sunpy-core/tests"]
